results/SpecGenBench/conversational/log-Smallest-2023_07_11_03_35_23.txt
public class Smallest {

    /*@ requires a != null;
      @ requires a.length <= Integer.MAX_VALUE;
      @ requires (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MIN_VALUE);
      @ ensures \result < a.length;
      @ ensures 0 <= \result && \result < a.length;
      @ ensures (\forall int i; 0 <= i && i < \result; a[i] >= a[\result]);
      @ ensures (\forall int i; \result < i && i < a.length; a[i] > a[\result]);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MIN_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MAX_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MIN_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MAX_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MIN_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MAX_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MIN_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MAX_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MIN_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MAX_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MIN_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MAX_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MIN_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MAX_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MIN_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MAX_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MIN_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MAX_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MIN_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MAX_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MIN_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MAX_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MIN_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MAX_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MIN_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MAX_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MIN_VALUE);
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MAX_VALUE
/home/max/Documents/JMLGPT/tmp/Smallest.java:3: error: unclosed comment
    /*@ requires a != null;
    ^
/home/max/Documents/JMLGPT/tmp/Smallest.java:37: error: reached end of file while parsing
      @ ensures (\forall int i; 0 <= i && i < a.length; a[i] != Integer.MAX_VALUE
                                                                                 ^
2 errors

